intro to css 03

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: #ffb5c1;
-    font-family: verdana, DejaVu Sans, sans-serif;
+    font-family: verdana, "DejaVu Sans", sans-serif;
 }
 
 #two {
